--- a/package.json
+++ b/package.json
@@ -89,9 +89,12 @@
 		"emoji-mart": "^5.5.2",
 		"eslint": "8.48.0",
 		"eslint-config-next": "14.0.1",
+		"file-saver": "^2.0.5",
 		"framer-motion": "^10.16.3",
 		"google-map-react": "^2.2.1",
 		"html-to-image": "^1.11.11",
+		"jspdf": "^2.5.2",
+		"jspdf-autotable": "^3.8.4",
 		"leaflet": "^1.9.4",
 		"lucide": "^0.270.0",
 		"lucide-react": "^0.269.0",
@@ -140,12 +143,14 @@
 		"tailwindcss-animate": "^1.0.6",
 		"unist-util-visit": "^5.0.0",
 		"vaul": "^0.8.0",
+		"xlsx": "^0.18.5",
 		"zod": "^3.22.4",
 		"zustand": "^4.4.1"
 	},
 	"devDependencies": {
 		"@faker-js/faker": "^8.2.0",
 		"@svgr/webpack": "^8.1.0",
+		"@types/file-saver": "^2.0.7",
 		"@types/next": "^9.0.0",
 		"@types/node": "^20.10.0",
 		"@types/react": "^18.2.38",
