--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
 	"compilerOptions": {
 		"lib": ["dom", "dom.iterable", "esnext"],
 		"target": "esnext",
-		"allowJs": true,
+		"allowJs": false,
 		"skipLibCheck": true,
 		"strict": true,
 		"noEmit": true,
@@ -13,16 +13,10 @@
 		"resolveJsonModule": true,
 		"isolatedModules": true,
 		"jsx": "preserve",
-		// new
 		"noUnusedParameters": false,
 		"preserveWatchOutput": true,
 		"strictNullChecks": true,
-		"composite": false,
-		"declaration": true,
-		"declarationMap": true,
 		"forceConsistentCasingInFileNames": true,
-		"inlineSources": false,
-		"noUnusedLocals": false,
 		"plugins": [
 			{
 				"name": "next"
@@ -32,22 +26,16 @@
 			"@/*": ["./*"]
 		}
 	},
-	"include": [
-		"next-env.d.ts",
-		".next/types/**/*.ts",
-		"**/*.ts",
-		"**/*.tsx",
-		"lib/utils.js",
-		"components/ui/switch.jsx",
-		"components/ui/input.tsx",
-		"components/dasboard-select.jsx",
-		"components/ui/tabs.jsx",
-		"components/ui/slider.jsx",
-		"app/[lang]/not-found.js",
-		"app/[lang]/(dashboard)/(chart)/(re-chart)/charts-rechart-pie/twolevel-pie.jsx",
-		"app/[lang]/(dashboard)/(chart)/(re-chart)/charts-rechart-pie/two-simple-pie.jsx",
-		"app/[lang]/(dashboard)/(chart)/(re-chart)/charts-rechart-radialbar/basic-radial-bar.jsx",
-		"app/[lang]/(dashboard)/(chart)/(re-chart)/charts-rechart-bar/barchart-with-multixaxis.tsx"
-	],
-	"exclude": ["node_modules"]
+	"include": ["next-env.d.ts", ".next/types/**/*.ts", "**/*.ts", "**/*.tsx"],
+	"exclude": [
+		"node_modules",
+		"dist",
+		".next",
+		"build",
+		"public",
+		"**/*.test.ts",
+		"**/*.spec.ts",
+		"app/[lang]/(dash-components)/**/*.ts",
+		"app/[lang]/(dash-components)/**/*.tsx"
+	]
 }
