--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
 		"dev": "next dev",
 		"build": "next build",
 		"start": "next start",
-		"lint": "next lint"
+		"lint": "tsc --noEmit"
 	},
 	"dependencies": {
 		"@ckeditor/ckeditor5-build-classic": "^40.1.0",
