--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
 		"dev": "next dev",
 		"build": "next build",
 		"start": "next start",
-		"lint": "tsc --noEmit"
+		"lint": "tsc --noEmit",
+		"test": "vitest"
 	},
 	"dependencies": {
 		"@ckeditor/ckeditor5-build-classic": "^40.1.0",
@@ -151,12 +152,18 @@
 	"devDependencies": {
 		"@faker-js/faker": "^8.2.0",
 		"@svgr/webpack": "^8.1.0",
+		"@testing-library/jest-dom": "^6.6.3",
+		"@testing-library/react": "^16.3.0",
 		"@types/file-saver": "^2.0.7",
 		"@types/next": "^9.0.0",
-		"@types/node": "^20.10.0",
+		"@types/node": "^20.17.23",
 		"@types/react": "^18.2.38",
 		"@types/react-dom": "^18.3.0",
 		"@types/react-input-mask": "^3.0.6",
-		"typescript": "^5.4.5"
+		"@vitejs/plugin-react": "^4.3.4",
+		"jsdom": "^26.0.0",
+		"typescript": "^5.4.5",
+		"vite": "^6.2.6",
+		"vitest": "^3.1.1"
 	}
 }
