--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,15 +1,18 @@
 {
 	"compilerOptions": {
-		"types": ["vite", "vitest", "node"],
-		"lib": ["dom", "dom.iterable", "esnext"],
 		"target": "esnext",
+		"module": "esnext",
+		"lib": [
+			"dom",
+			"dom.iterable",
+			"esnext"
+		],
 		"allowJs": false,
-		"skipLibCheck": true,
 		"strict": true,
 		"noEmit": true,
 		"incremental": true,
+		"skipLibCheck": true,
 		"esModuleInterop": true,
-		"module": "esnext",
 		"moduleResolution": "node",
 		"resolveJsonModule": true,
 		"isolatedModules": true,
@@ -19,16 +22,34 @@
 		"strictNullChecks": true,
 		"forceConsistentCasingInFileNames": true,
 		"baseUrl": ".",
-
+		"paths": {
+			"@/*": [
+				"./*"
+			]
+		},
+		"types": [
+			"vite",
+			"vitest",
+			"node"
+		],
 		"plugins": [
 			{
 				"name": "next"
 			}
-		],
-		"paths": {
-			"@/*": ["./*"]
-		}
+		]
 	},
-	"include": ["next-env.d.ts", ".next/types/**/*.ts", "**/*.ts", "**/*.tsx"],
-	"exclude": ["node_modules", "dist", ".next", "build", "public", "**/*.test.ts", "**/*.spec.ts"]
+	"include": [
+		"next-env.d.ts",
+		"**/*.ts",
+		"**/*.tsx"
+	],
+	"exclude": [
+		"node_modules",
+		".next",
+		"dist",
+		"build",
+		"public",
+		"**/*.test.ts",
+		"**/*.spec.ts"
+	]
 }
