--- a/package.json
+++ b/package.json
@@ -164,6 +164,7 @@
 		"jsdom": "^26.0.0",
 		"typescript": "^5.4.5",
 		"vite": "^6.2.6",
+		"vite-tsconfig-paths": "^5.1.4",
 		"vitest": "^3.1.1"
 	}
 }
