--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
 	"version": "6.0.0",
 	"private": true,
 	"scripts": {
-		"dev": "NODE_OPTIONS='--inspect=9229' next dev",
+		"dev": "next dev",
 		"build": "next build",
 		"start": "next start",
 		"lint": "tsc --noEmit",
