--- a/package.json
+++ b/package.json
@@ -146,6 +146,7 @@
 		"unist-util-visit": "^5.0.0",
 		"vaul": "^0.8.0",
 		"xlsx": "^0.18.5",
+		"xlsx-js-style": "^1.2.0",
 		"zod": "^3.24.1",
 		"zustand": "^4.4.1"
 	},
