--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,58 +1,33 @@
 {
-  "compilerOptions": {
-    "target": "esnext",
-    "module": "esnext",
-    "lib": [
-      "dom",
-      "dom.iterable",
-      "esnext"
-    ],
-    "allowJs": false,
-    "strict": true,
-    "noEmit": true,
-    "incremental": true,
-    "skipLibCheck": true,
-    "esModuleInterop": true,
-    "moduleResolution": "node",
-    "resolveJsonModule": true,
-    "isolatedModules": true,
-    "jsx": "preserve",
-    "noUnusedParameters": false,
-    "preserveWatchOutput": true,
-    "strictNullChecks": true,
-    "forceConsistentCasingInFileNames": true,
-    "baseUrl": ".", // garante que o root é o projeto
-    "paths": {
-      "@/*": [
-        "./*"
-      ] // permite usar @/componentes/...
-    },
-    "types": [
-      "vite",
-      "vitest",
-      "node",
-      "next-auth"
-    ],
-    "plugins": [
-      {
-        "name": "next"
-      }
-    ]
-  },
-  "include": [
-    "next-env.d.ts",
-    "**/*.ts",
-    "**/*.tsx",
-    ".next/types/**/*.ts",
-    "vitest/FileUpload.test.tsx"
-  ],
-  "exclude": [
-    "node_modules",
-    ".next",
-    "dist",
-    "build",
-    "public",
-    "**/*.test.ts",
-    "**/*.spec.ts"
-  ]
+	"compilerOptions": {
+		"target": "esnext",
+		"module": "esnext",
+		"lib": ["dom", "dom.iterable", "esnext"],
+		"allowJs": false,
+		"strict": true,
+		"noEmit": true,
+		"incremental": true,
+		"skipLibCheck": true,
+		"esModuleInterop": true,
+		"moduleResolution": "node",
+		"resolveJsonModule": true,
+		"isolatedModules": true,
+		"jsx": "preserve",
+		"noUnusedParameters": false,
+		"preserveWatchOutput": true,
+		"strictNullChecks": true,
+		"forceConsistentCasingInFileNames": true,
+		"baseUrl": ".", // garante que o root é o projeto
+		"paths": {
+			"@/*": ["./*"] // permite usar @/componentes/...
+		},
+		"types": ["vite", "vitest", "node", "next-auth"],
+		"plugins": [
+			{
+				"name": "next"
+			}
+		]
+	},
+	"include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "vitest/FileUpload.test.tsx"],
+	"exclude": ["node_modules", ".next", "dist", "build", "public", "**/*.test.ts", "**/*.spec.ts"]
 }
