--- a/package.json
+++ b/package.json
@@ -3,11 +3,12 @@
 	"version": "6.0.0",
 	"private": true,
 	"scripts": {
-		"dev": "next dev",
+		"dev": "tsc --noEmit && next dev",
 		"build": "next build",
 		"start": "next start",
 		"lint": "tsc --noEmit",
-		"test": "vitest run"
+		"test": "vitest run",
+		"dev:watch": "concurrently \"tsc -w --noEmit\" \"next dev\""
 	},
 	"dependencies": {
 		"@ckeditor/ckeditor5-build-classic": "^40.1.0",
